App body mobile horizontal overflow issue fixed

--- a/src/components/AppNavStyles.scss
+++ b/src/components/AppNavStyles.scss
@@ -3,10 +3,10 @@
 nav {
 	background: $beige;
 	width: 70vw;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	bottom: 0;
-	// right: 0;
+	left: -100%;
 	z-index: 99;
 	padding-top: 10px;
 	transition: 200ms;
@@ -19,11 +19,13 @@ nav {
 	}
 
 	&.mobile-hide {
-		right: -100%;
+		transform: translateX(-100%);
 	}
 
 	&.mobile-show {
-		right: 0;
+		// right: 0;
+		transform: translateX(0);
+		left: 0;
 	}
 
 	a {
