--- a/src/components/Cart/AppCartStyles.scss
+++ b/src/components/Cart/AppCartStyles.scss
@@ -6,7 +6,7 @@
 		width: 45px;
 		height: 45px;
 		border-radius: 50%;
-		position: absolute;
+		position: fixed;
 		display: grid;
 		place-items: center;
 		right: 15px;
