--- a/src/components/HamburgerMenuStyles.scss
+++ b/src/components/HamburgerMenuStyles.scss
@@ -9,7 +9,7 @@
 	justify-content: space-evenly;
 	padding: 7px 0;
 	z-index: 100;
-	position: absolute;
+	position: fixed;
 	right: 15px;
 	bottom: 15px;
 	background-color: $beige;
